# update-test

./: .gitignore  conver.ps1  package.json  pnpm-lock.yaml  temp  temp.txt
.github/workflows/: main.yml  release.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
